# zonnebrand

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
docs/pages/doctrees/: Documentation.doctree  Examples.doctree  Installation.doctree  dashboard.doctree  environment.pickle  index.doctree  server.doctree  sponsor.doctree  zonnebrand.zonnebrand.doctree
docs/pages/html/: .buildinfo  Documentation.html  Examples.html  Installation.html  dashboard.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  server.html  sponsor.html  zonnebrand.zonnebrand.html
docs/pages/html/_sources/: Documentation.rst.txt  Examples.rst.txt  dashboard.rst.txt  index.rst.txt  zonnebrand.zonnebrand.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: Documentation.rst  Examples.rst  Installation.rst  conf.py  dashboard.rst  helper.py  index.rst  server.rst
zonnebrand/: __init__.py  examples.py  sendmail.py  server.py  utils.py  zonnebrand.py
zonnebrand/dashboard/: dashboard.html  setup.html
